# zcash_eth_bridge

./: .gitmodules  Cargo.toml  README.md  anvil-state.json  build.sh  deploy_anvil.sh  run_anvil.sh  run_bridge.sh  run_demo.sh  run_zcash.sh
contracts/: .gitignore  foundry.toml  remappings.txt
contracts/script/: Deploy.s.sol
contracts/src/: WZec.sol  ZcashBridge.sol
contracts/test/: ZcashBridge.t.sol
contracts/test/invariant/: ZcashBridgeInvariant.t.sol
examples/: e2e_demo.rs
src/: lib.rs  main.rs  types.rs
src/eth/: contract.rs  mod.rs  sender.rs  watcher.rs
src/zcash/: sender.rs  watcher.rs
src/zebra_client/: client.rs  helpers.rs  mod.rs  regtest.rs  wallet.rs
tests/: e2e_demo.rs  send_deposit_only.rs  send_tze.rs
zcash_regtest/: ethbridge.toml
