[package]
name = "zcash_eth_bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "json"] }
clap = { version = "4.5", features = ["derive"] }

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
hex = "0.4"

zebra-rpc = { git = "https://github.com/matter-labs/zebra", branch = "popzxc-prototype" }
zebra-node-services = { git = "https://github.com/matter-labs/zebra", branch = "popzxc-prototype" }
zebra-chain = { git = "https://github.com/matter-labs/zebra", branch = "popzxc-prototype" }

zcash_transparent = { git = "https://github.com/matter-labs/librustzcash", branch = "popzxc-prototype" }
zcash_extensions = { git = "https://github.com/matter-labs/librustzcash", branch = "popzxc-prototype" }
zcash_primitives = { git = "https://github.com/matter-labs/librustzcash", branch = "popzxc-prototype" }
zcash_protocol = { git = "https://github.com/matter-labs/librustzcash", branch = "popzxc-prototype" }
zcash_address = { git = "https://github.com/matter-labs/librustzcash", branch = "popzxc-prototype" }
zcash_proofs = { git = "https://github.com/matter-labs/librustzcash", branch = "popzxc-prototype" }

zip32 = { version = "0.2", default-features = false }
secp256k1 = "0.29"
sha2 = "0.10"
ripemd = "0.1"
blake2b_simd = "1.0"
bip0039 = "0.12"
rand_core = "0.6"
alloy = "1.1.3"
futures = "0.3.31"
futures-util = "0.3.31"

[profile.dev.package.blake2b_simd]
opt-level = 3
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16
